# black_hat_rust_projects

./: .gitignore  README.md
tricoder/: Cargo.toml  README.md
tricoder/src/: main.rs  ports.rs  subdomains.rs
tricoder_async/: Cargo.toml
tricoder_async/src/: README.md  main.rs  ports.rs  subdomains.rs
