[package]
name = "tricoder_async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
thiserror = "1.0.59"
anyhow = "1.0.82"
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"]}
serde = { version = "1.0.198", features = ["derive"]}
trust-dns-resolver = "0.23.2"
futures = "0.3.30"
tokio-stream = "0.1.15"
